# GIMP_Latest-Fork

./: .gitignore  .gitlab-ci.yml  INSTALL.in  NEWS  README  configure.ac  meson.build  meson_options.txt  metadata-editor.c  metadata-tags.c
app/: gimp-update.c  gimpcore.def  language.c  meson.build
app/actions/: actions.c  actions.h  brush-editor-actions.c  dialogs-actions.c  edit-actions.c  edit-commands.c  error-console-commands.c  file-commands.c  filters-actions.c  glyphs-panel-actions.c  glyphs-panel-actions.h  images-commands.c  layers-commands.c  meson.build  select-actions.c  select-commands.c  select-commands.h  text-editor-actions.c  text-tool-actions.c  text-tool-commands.c  text-tool-commands.h  tools-actions.c  vectors-commands.c  view-actions.c  view-commands.c  view-commands.h  windows-actions.c
app/config/: gimpconfig-dump.c  gimpcoreconfig.c  gimpcoreconfig.h  gimpdialogconfig.c  gimpdisplayconfig.c  gimpdisplayconfig.h  gimprc-blurbs.h
app/core/: core-enums.c  core-enums.h  core-types.h  gimp-edit.c  gimp-gui.c  gimp-transform-resize.c  gimp-utils.c  gimp.c  gimpcontext.c  gimpcontext.h  gimpdrawable-fill.c  gimpdrawable-fill.h  gimpdrawable.c  gimpdrawablefilterundo.c  gimpdrawablefilterundo.h  gimpfilloptions.c  gimpfilloptions.h  gimpgrouplayer.c  gimphistogram.c  gimphistogram.h  gimpimage-new.c  gimpimage-undo-push.c  gimpimage-undo-push.h  gimpimage-undo.c  gimpimage.c  gimpimage.h  gimplayer.c  gimplayer.h  gimpmeasure.c  gimpmeasure.h  gimpselection.c  gimpselection.h  gimpstrokeoptions.c  gimpstrokeoptions.h  gimpsymmetry-mandala.c  gimpsymmetry-mirror.c  gimptooloptions.c  gimptooloptions.h  gimpundo.c
app/dialogs/: dialogs-constructors.c  dialogs-constructors.h  dialogs.c  layer-add-mask-dialog.c  layer-add-mask-dialog.h  layer-options-dialog.c  preferences-dialog.c  welcome-dialog.c
app/display/: gimpcanvastextcursor.c  (+7 more)
app/operations/opencl/: layer-mode-normal.cl  meson.build  set-alpha.cl
data/: meson.build
data/tags/: meson.build
desktop/: meson.build
devel-docs/: propwidgets.md
etc/: gimprc.in  meson.build
extensions/: meson.build
libgimp/: gimp.c  gimp.def  gimpenums.c.tail  gimpimageundo_pdb.h  gimpparamspecs-desc.c  gimpplugin.c  gimpprocedure.c  gimpprocedure.h  gimpproceduredialog.c  gimppropwidgets.c  gimppropwidgets.h  gimptextlayer_pdb.c  gimptextlayer_pdb.h  gimpui.def  meson.build  propwidgetfactory.c  propwidgetfactory.h
libgimpbase/: gimp-type-module.c  gimp-type-module.h  gimpbase.def  gimpbaseenums.c  gimpbaseenums.h  gimpchoice.c  gimpcompatenums.h  gimpenv.c  gimpenv.h  gimpmetadata.c  gimpprotocol.c  gimpprotocol.h  gimpreloc.c  meson.build
libgimpcolor/: gimpcolor.c  gimpcolor.def  gimpcolor.h
libgimpconfig/: gimpconfig-path.c
libgimpmath/: gimpmath.def  gimpvector.c  gimpvector.h
libgimpthumb/: gimp-thumbnail-list.c  gimpthumb-enums.h
libgimpwidgets/: gimpcolorarea.c  gimpcolorselection.c  gimpicons.c  gimpicons.h  gimpintstore.c  gimpintstore.h  gimplabeledpropwidget.c  gimplabeledpropwidget.h  gimpmockenum.c  gimpmockenum.h  gimpsizeentry.c  gimpspinscale.c  gimpwidgets-private.c  gimpwidgets-private.h  gimpwidgets.def  gimpwidgets.h  meson.build
menus/: dialogs-menuitems.ui.in  image-menu.ui.in.in  meson.build  text-editor-toolbar.ui  text-tool-menu.ui
modules/: meson.build
pdb/: enums.pl
plug-ins/: meson.build
plug-ins/file-dicom/: file-dicom.c  gdcm-wrapper.cc  gdcm-wrapper.h  meson.build
po/: ar.po  fr.po
po-plug-ins/: POTFILES.in  POTFILES.skip
po-script-fu/: POTFILES.in
themes/: meson.build
tools/: meson.build
(+294 files in other folders)
